Оставшиеся группы /tasks и /tracker покрыты документацией swagger.
